<resources>
    <string name="app_name">WithMap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Normal Words -->
    <string name="next">다음</string>
    <string name="close">닫기</string>
    <string name="start">시작하기</string>
    <string name="it_helped">도움 되었어요</string>
    <string name="report">신고</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="trade">교환소</string>
    <string name="insert_address">주소 입력</string>
    <string name="trade_explain_1">교환할 기여도를 5000단위로 입력해주세요</string>
    <string name="trade_explain_2">보유한 기여도는&#x20;</string>
    <string name="trade_explain_3">점 입니다.</string>
    <string name="search_bar">장소, 주소 검색</string>
</resources>
